force-app/main/default/objects/TTS_Agreement_Party__c/TTS_Agreement_Party__c.object-meta.xml
<CustomObject>
    <description>Represents an organisation or individual participating in a specific Agreement.</description>
    <label>Agreement Party</label>
    <nameField>
        <displayFormat>AGRP{00000}</displayFormat>
        <label>Agreement Party ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>