force-app/main/default/objects/TTS_Agreement_Party__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the agreement party to the participating organisation.</description>
    <inlineHelpText>Select the organisation that is a party to the agreement.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreement Parties</relationshipLabel>
    <relationshipName>Agreement_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>