force-app/main/default/objects/TTS_Agreement_Party__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <description>Associates the party with its parent Agreement.</description>
    <inlineHelpText>Select the Agreement in which this party participates.</inlineHelpText>
    <label>Agreement</label>
    <referenceTo>TTS_Agreement__c</referenceTo>
    <relationshipLabel>Agreement Parties</relationshipLabel>
    <relationshipName>Agreement_Parties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>