force-app/main/default/objects/TTS_Agreement_Party__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the agreement party to the participating individual Contact.</description>
    <inlineHelpText>Select the individual Contact who is a party to the agreement.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agreement Parties</relationshipLabel>
    <relationshipName>Agreement_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>