force-app/main/default/objects/TTS_Agreement_Party__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Identifies the party's role in the agreement.</description>
    <inlineHelpText>Select the role this organisation or individual has in the agreement.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>Recipient</fullName>
            </value>
            <value>
                <fullName>Principal Investigator (PI)</fullName>
            </value>
            <value>
                <fullName>Co-Principal Investigator</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Collaborator</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>